fixed positioning issue on mobile view

--- a/src/container/styles/Container.css
+++ b/src/container/styles/Container.css
@@ -16,8 +16,8 @@
     position: relative;
     /* excluding nav bar's height */
     overflow: scroll;
-
-    height: calc(100% - 43px);
+    height: 100%;
+    /* height: calc(100% - 43px); */
 }
 
 
